# language-detector

./: .gitignore  .pdm-python  LanguageDetector.spec  README.md  app.py  app.spec  build.py  build.spec  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
data/: cleaned_language_data.csv
docs/: README.md
models/: language_model.pkl  vectorizer.pkl
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb
src/: predict_language.py
